add generate scripts

--- a/variants/mysqlclient/Dockerfile
+++ b/variants/mysqlclient/Dockerfile
@@ -1,8 +1,14 @@
-FROM alpine
+FROM alpine:3.8
 
-MAINTAINER The Oh Brothers
+RUN apk update \
+    && apk add --no-cache curl wget
 
-RUN apk add --update curl wget openssl mysql-client && rm -rf /var/cache/apk/*
+RUN apk update \
+    && apk add --no-cache mysql-client
+
+# Cleanup
+RUN rm -rf /usr/src/php \
+    && rm -rf /var/cache/apk/*
 
 # This is the only signal from the docker host that appears to stop crond
 STOPSIGNAL SIGKILL
