--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,7 +15,7 @@ build-bare:
     - api
   variables:
     VARIANT_TAG: "bare"
-    VARIANT_TAG_WITH_VERSION: "bare-v1.0.0"
+    VARIANT_TAG_WITH_VERSION: "bare-v1.0.1a"
     VARIANT_BUILD_DIR: "variants/alpine/bare"
   before_script:
     - date '+%Y-%m-%d %H:%M:%S %z'
@@ -61,7 +61,7 @@ build-openssl:
     - api
   variables:
     VARIANT_TAG: "openssl"
-    VARIANT_TAG_WITH_VERSION: "openssl-v1.0.0"
+    VARIANT_TAG_WITH_VERSION: "openssl-v1.0.1a"
     VARIANT_BUILD_DIR: "variants/alpine/openssl"
   before_script:
     - date '+%Y-%m-%d %H:%M:%S %z'
@@ -107,7 +107,7 @@ build-mysqlclient:
     - api
   variables:
     VARIANT_TAG: "mysqlclient"
-    VARIANT_TAG_WITH_VERSION: "mysqlclient-v1.0.0"
+    VARIANT_TAG_WITH_VERSION: "mysqlclient-v1.0.1a"
     VARIANT_BUILD_DIR: "variants/alpine/mysqlclient"
   before_script:
     - date '+%Y-%m-%d %H:%M:%S %z'
@@ -153,7 +153,7 @@ build-mysqlclient-openssl:
     - api
   variables:
     VARIANT_TAG: "mysqlclient-openssl"
-    VARIANT_TAG_WITH_VERSION: "mysqlclient-openssl-v1.0.0"
+    VARIANT_TAG_WITH_VERSION: "mysqlclient-openssl-v1.0.1a"
     VARIANT_BUILD_DIR: "variants/alpine/mysqlclient-openssl"
   before_script:
     - date '+%Y-%m-%d %H:%M:%S %z'
