--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,188 +7,77 @@ variables:
 stages:
   - build
 
-
-build-bare:
+.build_template: &build_definition
   stage: build
   only:
     - master
     - api
+  before_script:
+  - date '+%Y-%m-%d %H:%M:%S %z'
+
+  # Login to Docker Hub registry
+  - echo "${DOCKERHUB_REGISTRY_PASSWORD}" | docker login -u "${DOCKERHUB_REGISTRY_USER}" --password-stdin
+
+  # Login to GitLab registry
+  - echo "${CI_REGISTRY_PASSWORD}" | docker login -u "${CI_REGISTRY_USER}" --password-stdin "${CI_REGISTRY}"
+
+  script:
+  - date '+%Y-%m-%d %H:%M:%S %z'
+
+  - if [ -z "$VARIANT_TAG" ] && echo "VARIANT_TAG is empty" && exit 1
+  - if [ -z "$VARIANT_TAG_WITH_VERSION" ] && echo "VARIANT_TAG_WITH_VERSION is empty" && exit 1
+  - if [ -z "$VARIANT_BUILD_DIR" ] && echo "VARIANT_BUILD_DIR is empty" && exit 1
+
+  - docker build
+    -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}"
+    -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_VERSION}"
+    -t "${CI_REGISTRY_IMAGE}:${VARIANT_TAG}"
+    -t "${CI_REGISTRY_IMAGE}:${VARIANT_TAG_WITH_VERSION}"
+    "${VARIANT_BUILD_DIR}"
+
+  - date '+%Y-%m-%d %H:%M:%S %z'
+
+  # Push to Docker Hub registry. E.g. 'namespace/my-project:tag'
+  - docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}"
+  - docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_VERSION}"
+
+  # Push to GitLab registry. E.g. 'registry.gitlab.com/namespace/my-project:tag
+  - docker push "${CI_REGISTRY_IMAGE}:${VARIANT_TAG}"
+  - docker push "${CI_REGISTRY_IMAGE}:${VARIANT_TAG_WITH_VERSION}"
+
+  after_script:
+  - date '+%Y-%m-%d %H:%M:%S %z'
+
+  # Log out of Docker Hub registry
+  - docker logout
+
+  # Log out of GitLab registry
+  - docker logout "${CI_REGISTRY}"
+
+build-bare:
+  <<: *build_definition
   variables:
     VARIANT_TAG: "bare"
     VARIANT_TAG_WITH_VERSION: "bare-v1.0.1"
     VARIANT_BUILD_DIR: "variants/alpine/bare"
-  before_script:
-    - date '+%Y-%m-%d %H:%M:%S %z'
 
-    # Login to Docker Hub registry
-    - echo "${DOCKERHUB_REGISTRY_PASSWORD}" | docker login -u "${DOCKERHUB_REGISTRY_USER}" --password-stdin
-
-    # Login to GitLab registry
-    - echo "${CI_REGISTRY_PASSWORD}" | docker login -u "${CI_REGISTRY_USER}" --password-stdin "${CI_REGISTRY}"
-
-  script:
-    - date '+%Y-%m-%d %H:%M:%S %z'
-    - docker build
-      -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}"
-      -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_VERSION}"
-      -t "${CI_REGISTRY_IMAGE}:${VARIANT_TAG}"
-      -t "${CI_REGISTRY_IMAGE}:${VARIANT_TAG_WITH_VERSION}"
-      "${VARIANT_BUILD_DIR}"
-
-    - date '+%Y-%m-%d %H:%M:%S %z'
-
-    # Push to Docker Hub registry. E.g. 'namespace/my-project:tag'
-    - docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}"
-    - docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_VERSION}"
-
-    # Push to GitLab registry. E.g. 'registry.gitlab.com/namespace/my-project:tag
-    - docker push "${CI_REGISTRY_IMAGE}:${VARIANT_TAG}"
-    - docker push "${CI_REGISTRY_IMAGE}:${VARIANT_TAG_WITH_VERSION}"
-
-  after_script:
-    - date '+%Y-%m-%d %H:%M:%S %z'
-
-    # Log out of Docker Hub registry
-    - docker logout
-
-    # Log out of GitLab registry
-    - docker logout "${CI_REGISTRY}"
- 
 build-openssl:
-  stage: build
-  only:
-    - master
-    - api
+  <<: *build_definition
   variables:
     VARIANT_TAG: "openssl"
     VARIANT_TAG_WITH_VERSION: "openssl-v1.0.1"
     VARIANT_BUILD_DIR: "variants/alpine/openssl"
-  before_script:
-    - date '+%Y-%m-%d %H:%M:%S %z'
 
-    # Login to Docker Hub registry
-    - echo "${DOCKERHUB_REGISTRY_PASSWORD}" | docker login -u "${DOCKERHUB_REGISTRY_USER}" --password-stdin
-
-    # Login to GitLab registry
-    - echo "${CI_REGISTRY_PASSWORD}" | docker login -u "${CI_REGISTRY_USER}" --password-stdin "${CI_REGISTRY}"
-
-  script:
-    - date '+%Y-%m-%d %H:%M:%S %z'
-    - docker build
-      -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}"
-      -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_VERSION}"
-      -t "${CI_REGISTRY_IMAGE}:${VARIANT_TAG}"
-      -t "${CI_REGISTRY_IMAGE}:${VARIANT_TAG_WITH_VERSION}"
-      "${VARIANT_BUILD_DIR}"
-
-    - date '+%Y-%m-%d %H:%M:%S %z'
-
-    # Push to Docker Hub registry. E.g. 'namespace/my-project:tag'
-    - docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}"
-    - docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_VERSION}"
-
-    # Push to GitLab registry. E.g. 'registry.gitlab.com/namespace/my-project:tag
-    - docker push "${CI_REGISTRY_IMAGE}:${VARIANT_TAG}"
-    - docker push "${CI_REGISTRY_IMAGE}:${VARIANT_TAG_WITH_VERSION}"
-
-  after_script:
-    - date '+%Y-%m-%d %H:%M:%S %z'
-
-    # Log out of Docker Hub registry
-    - docker logout
-
-    # Log out of GitLab registry
-    - docker logout "${CI_REGISTRY}"
- 
 build-mysqlclient:
-  stage: build
-  only:
-    - master
-    - api
+  <<: *build_definition
   variables:
     VARIANT_TAG: "mysqlclient"
     VARIANT_TAG_WITH_VERSION: "mysqlclient-v1.0.1"
     VARIANT_BUILD_DIR: "variants/alpine/mysqlclient"
-  before_script:
-    - date '+%Y-%m-%d %H:%M:%S %z'
 
-    # Login to Docker Hub registry
-    - echo "${DOCKERHUB_REGISTRY_PASSWORD}" | docker login -u "${DOCKERHUB_REGISTRY_USER}" --password-stdin
-
-    # Login to GitLab registry
-    - echo "${CI_REGISTRY_PASSWORD}" | docker login -u "${CI_REGISTRY_USER}" --password-stdin "${CI_REGISTRY}"
-
-  script:
-    - date '+%Y-%m-%d %H:%M:%S %z'
-    - docker build
-      -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}"
-      -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_VERSION}"
-      -t "${CI_REGISTRY_IMAGE}:${VARIANT_TAG}"
-      -t "${CI_REGISTRY_IMAGE}:${VARIANT_TAG_WITH_VERSION}"
-      "${VARIANT_BUILD_DIR}"
-
-    - date '+%Y-%m-%d %H:%M:%S %z'
-
-    # Push to Docker Hub registry. E.g. 'namespace/my-project:tag'
-    - docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}"
-    - docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_VERSION}"
-
-    # Push to GitLab registry. E.g. 'registry.gitlab.com/namespace/my-project:tag
-    - docker push "${CI_REGISTRY_IMAGE}:${VARIANT_TAG}"
-    - docker push "${CI_REGISTRY_IMAGE}:${VARIANT_TAG_WITH_VERSION}"
-
-  after_script:
-    - date '+%Y-%m-%d %H:%M:%S %z'
-
-    # Log out of Docker Hub registry
-    - docker logout
-
-    # Log out of GitLab registry
-    - docker logout "${CI_REGISTRY}"
- 
 build-mysqlclient-openssl:
-  stage: build
-  only:
-    - master
-    - api
+  <<: *build_definition
   variables:
     VARIANT_TAG: "mysqlclient-openssl"
     VARIANT_TAG_WITH_VERSION: "mysqlclient-openssl-v1.0.1"
     VARIANT_BUILD_DIR: "variants/alpine/mysqlclient-openssl"
-  before_script:
-    - date '+%Y-%m-%d %H:%M:%S %z'
-
-    # Login to Docker Hub registry
-    - echo "${DOCKERHUB_REGISTRY_PASSWORD}" | docker login -u "${DOCKERHUB_REGISTRY_USER}" --password-stdin
-
-    # Login to GitLab registry
-    - echo "${CI_REGISTRY_PASSWORD}" | docker login -u "${CI_REGISTRY_USER}" --password-stdin "${CI_REGISTRY}"
-
-  script:
-    - date '+%Y-%m-%d %H:%M:%S %z'
-    - docker build
-      -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}"
-      -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_VERSION}"
-      -t "${CI_REGISTRY_IMAGE}:${VARIANT_TAG}"
-      -t "${CI_REGISTRY_IMAGE}:${VARIANT_TAG_WITH_VERSION}"
-      "${VARIANT_BUILD_DIR}"
-
-    - date '+%Y-%m-%d %H:%M:%S %z'
-
-    # Push to Docker Hub registry. E.g. 'namespace/my-project:tag'
-    - docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}"
-    - docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_VERSION}"
-
-    # Push to GitLab registry. E.g. 'registry.gitlab.com/namespace/my-project:tag
-    - docker push "${CI_REGISTRY_IMAGE}:${VARIANT_TAG}"
-    - docker push "${CI_REGISTRY_IMAGE}:${VARIANT_TAG_WITH_VERSION}"
-
-  after_script:
-    - date '+%Y-%m-%d %H:%M:%S %z'
-
-    # Log out of Docker Hub registry
-    - docker logout
-
-    # Log out of GitLab registry
-    - docker logout "${CI_REGISTRY}"
-
