--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,16 @@ stages:
 .build_template: &build_definition
   stage: build
   only:
-    - master
-    - api
+    refs:
+      - branches
+      - /^v(?:\d+\.)+\d+$/
+    variables:
+      - $VARIANT_TAG
+      - $VARIANT_TAG_WITH_VERSION
+      - $VARIANT_BUILD_DIR
+  except:
+      refs:
+        - master
   before_script:
   - date '+%Y-%m-%d %H:%M:%S %z'
 
@@ -23,10 +31,6 @@ stages:
 
   script:
   - date '+%Y-%m-%d %H:%M:%S %z'
-
-  - if [ -z "$VARIANT_TAG" ]; then echo "VARIANT_TAG is empty" && exit 1; fi
-  - if [ -z "$VARIANT_TAG_WITH_VERSION" ]; then echo "VARIANT_TAG_WITH_VERSION is empty" && exit 1; fi
-  - if [ -z "$VARIANT_BUILD_DIR" ]; then echo "VARIANT_BUILD_DIR is empty" && exit 1; fi
 
   - docker build
     -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}"
@@ -57,27 +61,27 @@ stages:
 build-bare:
   <<: *build_definition
   variables:
-    VARIANT_TAG: "bare"
-    VARIANT_TAG_WITH_VERSION: "bare-v1.0.2"
-    VARIANT_BUILD_DIR: "variants/alpine/bare"
+    VARIANT_TAG: bare
+    VARIANT_TAG_WITH_VERSION: bare-$CI_COMMIT_REF_NAME
+    VARIANT_BUILD_DIR: variants/alpine/bare
 
 build-openssl:
   <<: *build_definition
   variables:
-    VARIANT_TAG: "openssl"
-    VARIANT_TAG_WITH_VERSION: "openssl-v1.0.2"
-    VARIANT_BUILD_DIR: "variants/alpine/openssl"
+    VARIANT_TAG: openssl
+    VARIANT_TAG_WITH_VERSION: openssl-$CI_COMMIT_REF_NAME
+    VARIANT_BUILD_DIR: variants/alpine/openssl
 
 build-mysqlclient:
   <<: *build_definition
   variables:
-    VARIANT_TAG: "mysqlclient"
-    VARIANT_TAG_WITH_VERSION: "mysqlclient-v1.0.2"
-    VARIANT_BUILD_DIR: "variants/alpine/mysqlclient"
+    VARIANT_TAG: mysqlclient
+    VARIANT_TAG_WITH_VERSION: mysqlclient-$CI_COMMIT_REF_NAME
+    VARIANT_BUILD_DIR: variants/alpine/mysqlclient
 
 build-mysqlclient-openssl:
   <<: *build_definition
   variables:
-    VARIANT_TAG: "mysqlclient-openssl"
-    VARIANT_TAG_WITH_VERSION: "mysqlclient-openssl-v1.0.2"
-    VARIANT_BUILD_DIR: "variants/alpine/mysqlclient-openssl"
+    VARIANT_TAG: mysqlclient-openssl
+    VARIANT_TAG_WITH_VERSION: mysqlclient-openssl-$CI_COMMIT_REF_NAME
+    VARIANT_BUILD_DIR: variants/alpine/mysqlclient-openssl
