Improve Variant templating; Regenerate Dockerfiles

--- a/variants/openssl-alpine-3.8/Dockerfile
+++ b/variants/openssl-alpine-3.8/Dockerfile
@@ -1,7 +1,8 @@
 FROM alpine:3.8
 
-RUN apk update \
-    && apk add --no-cache curl wget
+RUN apk add --no-cache curl wget
+
+RUN apk add --no-cache openssl
 
 
 
