--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -6,12 +6,12 @@ on:
     - release
 
 jobs:
-  build-bare:
+  build-mysqlclient-alpine-3-8:
     runs-on: ubuntu-18.04
     env:
-      VARIANT_TAG: bare
-      # VARIANT_TAG_WITH_REF: bare-${GITHUB_REF}
-      VARIANT_BUILD_DIR: variants/alpine/bare
+      VARIANT_TAG: mysqlclient-alpine-3.8
+      # VARIANT_TAG_WITH_REF: mysqlclient-alpine-3.8-${GITHUB_REF}
+      VARIANT_BUILD_DIR: variants/mysqlclient-alpine-3.8
     steps:
     - uses: actions/checkout@v1
     - name: Display system info (linux)
@@ -59,12 +59,12 @@ jobs:
     - name: Clean-up
       run: docker logout
       if: always()
-  build-openssl:
+  build-openssl-alpine-3-8:
     runs-on: ubuntu-18.04
     env:
-      VARIANT_TAG: openssl
-      # VARIANT_TAG_WITH_REF: openssl-${GITHUB_REF}
-      VARIANT_BUILD_DIR: variants/alpine/openssl
+      VARIANT_TAG: openssl-alpine-3.8
+      # VARIANT_TAG_WITH_REF: openssl-alpine-3.8-${GITHUB_REF}
+      VARIANT_BUILD_DIR: variants/openssl-alpine-3.8
     steps:
     - uses: actions/checkout@v1
     - name: Display system info (linux)
@@ -112,65 +112,12 @@ jobs:
     - name: Clean-up
       run: docker logout
       if: always()
-  build-mysqlclient:
+  build-mysqlclient-openssl-alpine-3-8:
     runs-on: ubuntu-18.04
     env:
-      VARIANT_TAG: mysqlclient
-      # VARIANT_TAG_WITH_REF: mysqlclient-${GITHUB_REF}
-      VARIANT_BUILD_DIR: variants/alpine/mysqlclient
-    steps:
-    - uses: actions/checkout@v1
-    - name: Display system info (linux)
-      run: |
-        set -e
-        hostname
-        whoami
-        cat /etc/*release
-        lscpu
-        free
-        df -h
-        pwd
-        docker info
-        docker version
-    - name: Login to docker registry
-      run: echo "${DOCKERHUB_REGISTRY_PASSWORD}" | docker login -u "${DOCKERHUB_REGISTRY_USER}" --password-stdin
-      env:
-        DOCKERHUB_REGISTRY_USER: ${{ secrets.DOCKERHUB_REGISTRY_USER }}
-        DOCKERHUB_REGISTRY_PASSWORD: ${{ secrets.DOCKERHUB_REGISTRY_PASSWORD }}
-    - name: Build and push image
-      env:
-        DOCKERHUB_REGISTRY_USER: ${{ secrets.DOCKERHUB_REGISTRY_USER }}
-      run: |
-        set -e
-
-        # Get 'project-name' from 'namespace/project-name'
-        CI_PROJECT_NAME=$( echo "${GITHUB_REPOSITORY}" | rev | cut -d '/' -f 1 | rev )
-
-        # Get 'ref-name' from 'refs/heads/ref-name'
-        REF=$( echo "${GITHUB_REF}" | rev | cut -d '/' -f 1 | rev )
-        SHA_SHORT=$( echo "${GITHUB_SHA}" | cut -c1-7 )
-
-        # Generate the final tags. E.g. 'release-v1.0.0-alpine' and 'release-b29758a-v1.0.0-alpine'
-        VARIANT_TAG_WITH_REF="${REF}-${VARIANT_TAG}"
-        VARIANT_TAG_WITH_REF_AND_SHA_SHORT="${REF}-${SHA_SHORT}-${VARIANT_TAG}"
-
-        docker build \
-          -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}" \
-          -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_REF}" \
-          -t "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_REF_AND_SHA_SHORT}" \
-          "${VARIANT_BUILD_DIR}"
-        docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG}"
-        docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_REF}"
-        docker push "${DOCKERHUB_REGISTRY_USER}/${CI_PROJECT_NAME}:${VARIANT_TAG_WITH_REF_AND_SHA_SHORT}"
-    - name: Clean-up
-      run: docker logout
-      if: always()
-  build-mysqlclient-openssl:
-    runs-on: ubuntu-18.04
-    env:
-      VARIANT_TAG: mysqlclient-openssl
-      # VARIANT_TAG_WITH_REF: mysqlclient-openssl-${GITHUB_REF}
-      VARIANT_BUILD_DIR: variants/alpine/mysqlclient-openssl
+      VARIANT_TAG: mysqlclient-openssl-alpine-3.8
+      # VARIANT_TAG_WITH_REF: mysqlclient-openssl-alpine-3.8-${GITHUB_REF}
+      VARIANT_BUILD_DIR: variants/mysqlclient-openssl-alpine-3.8
     steps:
     - uses: actions/checkout@v1
     - name: Display system info (linux)
