--- a/.github/workflows/ci-master-pr.yml
+++ b/.github/workflows/ci-master-pr.yml
@@ -10,6 +10,27 @@ on:
     branches:
     - master
 jobs:
+  test-nogitdiff:
+    runs-on: ubuntu-latest
+    container:
+      image: mcr.microsoft.com/powershell:7.2.2-alpine-3.14-20220318
+    steps:
+    - run: |
+        apk add --no-cache git
+    - uses: actions/checkout@v3
+    - name: Ignore git permissions
+      run: |
+        git config --global --add safe.directory "$( pwd )"
+    - name: Generate variants
+      run: |
+        pwsh -Command '
+        $ErrorActionPreference = "Stop"
+        Install-Module -Name Generate-DockerImageVariants -Force -Scope CurrentUser -Verbose
+        Generate-DockerImageVariants .
+        '
+    - name: Test - no git diff
+      run: |
+        git diff --exit-code
 
   build-3-12:
     runs-on: ubuntu-latest
@@ -2763,3 +2784,17 @@ jobs:
           tag: ${{ github.ref_name }} # E.g. 'master' or 'v1.2.3'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  update-dockerhub-description:
+    needs: [build-3-12, build-3-12-mysqlclient, build-3-12-openssl, build-3-12-mysqlclient-openssl, build-3-11, build-3-11-mysqlclient, build-3-11-openssl, build-3-11-mysqlclient-openssl, build-3-10, build-3-10-mysqlclient, build-3-10-openssl, build-3-10-mysqlclient-openssl, build-3-9, build-3-9-mysqlclient, build-3-9-openssl, build-3-9-mysqlclient-openssl, build-3-8, build-3-8-mysqlclient, build-3-8-openssl, build-3-8-mysqlclient-openssl]
+    if: github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/')
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Docker Hub Description
+      uses: peter-evans/dockerhub-description@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_REGISTRY_USER }}
+        password: ${{ secrets.DOCKERHUB_REGISTRY_PASSWORD }}
+        repository: ${{ github.repository }}
+        short-description: ${{ github.event.repository.description }}
