--- a/variants/3.20-mysqlclient-openssl/Dockerfile
+++ b/variants/3.20-mysqlclient-openssl/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.20
 
-RUN apk add --no-cache curl wget
+RUN apk add --no-cache ca-certificates curl wget
 
 RUN apk add --no-cache mysql-client
 
