--- a/variants/3.12-mysqlclient/Dockerfile
+++ b/variants/3.12-mysqlclient/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.12
 
-RUN apk add --no-cache curl wget
+RUN apk add --no-cache ca-certificates curl wget
 
 RUN apk add --no-cache mysql-client
 
