--- a/variants/3.15/Dockerfile
+++ b/variants/3.15/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:3.15
 
-RUN apk add --no-cache curl wget
+RUN apk add --no-cache ca-certificates curl wget
 
 # This is the only signal from the docker host that appears to stop crond
 STOPSIGNAL SIGKILL
